--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "description": "Tämä on repository Sovellusohjelmointi 2 -opintojakson oppimistehtävien palautukseen.",
   "main": "index.ts",
   "scripts": {
-    "start" : "npx nodemon index.ts"
+    "start": "npx nodemon index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.17",
     "nodemon": "^2.0.15",
+    "prisma": "^3.14.0",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.14.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
